--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,7 @@
-/* ./styles/globals.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.fit {
+  min-height: calc(100vh - 88px);
+}
